--- a/bower.json
+++ b/bower.json
@@ -1,12 +1,15 @@
 {
-  "name": "ng-boilerplate",
+  "name": "cornercase",
   "version": "0.0.4",
   "devDependencies": {
     "angular": "~1.2",
     "angular-mocks": "~1.2",
     "bootstrap": "~3.1",
     "angular-bootstrap": "~0.10.0",
-    "angular-ui-router": "~0.2"
+    "angular-ui-router": "~0.2",
+    "angular-ui-select": "~0.7.0",
+    "angular-sanitize": "~1.3.0",
+    "angular-ui-utils": "0.1.1"
   },
   "dependencies": {}
 }
